# stratum_sourcing

./: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
app/: config.py  database.py
app/api/: routes.py
app/integrations/: llm.py  notion_sync.py  slack_bot.py
app/pipeline/: analyzer.py  deduplicator.py  orchestrator.py  scorer.py
src/: server.js
